src/shell-app.c
@@ -74,7 +74,6 @@ struct _ShellApp
 
   char *casefolded_name;
   char *name_collation_key;
-  char *casefolded_description;
   char *casefolded_exec;
   char **casefolded_keywords;
 };
@@ -1310,7 +1309,6 @@ shell_app_init_search_data (ShellApp *app)
 {
   const char *name;
   const char *exec;
-  const char *comment;
   const char * const *keywords;
   char *normalized_exec;
   GDesktopAppInfo *appinfo;
@@ -1318,9 +1316,6 @@ shell_app_init_search_data (ShellApp *app)
   appinfo = gmenu_tree_entry_get_app_info (app->entry);
   name = g_app_info_get_name (G_APP_INFO (appinfo));
   app->casefolded_name = shell_util_normalize_and_casefold (name);
-
-  comment = g_app_info_get_description (G_APP_INFO (appinfo));
-  app->casefolded_description = shell_util_normalize_and_casefold (comment);
 
   exec = g_app_info_get_executable (G_APP_INFO (appinfo));
   normalized_exec = shell_util_normalize_and_casefold (exec);
@@ -1401,16 +1396,6 @@ _shell_app_match_search_terms (ShellApp  *app,
               else if (current_match < MATCH_PREFIX)
                 current_match = MATCH_SUBSTRING;
             }
-        }
-
-      if (app->casefolded_description && current_match < MATCH_PREFIX)
-        {
-          /* Only do substring matches, as prefix matches are not meaningful
-           * enough for descriptions
-           */
-          p = strstr (app->casefolded_description, term);
-          if (p != NULL)
-            current_match = MATCH_SUBSTRING;
         }
 
       if (app->casefolded_keywords)
@@ -1511,7 +1496,6 @@ shell_app_finalize (GObject *object)
 
   g_free (app->casefolded_name);
   g_free (app->name_collation_key);
-  g_free (app->casefolded_description);
   g_free (app->casefolded_exec);
   g_strfreev (app->casefolded_keywords);
 
